# bare-metal-idris-core

./: CMakeLists.txt  README.md  packages.md
cmake/: Idris.cmake  clang-gcc-toolchain.cmake  gcc-toolchain.cmake  platforms.cmake  top-level.cmake  utils.cmake
src/: boot.s  core-app.c  dummy.c  memmap  newlib.c  premain.c  rw.s
src/include/: platform.h
src/native/: CMakeLists.txt  native-hello-world.c  native-led-blink.c
src/starterwarefree/: CMakeLists.txt
src/starterwarefree/drivers/: CMakeLists.txt
src/starterwarefree/include/hw/: HwCmPer.idr  SocAM335x.idr
src/starterwarefree/platform/beaglebone/: CMakeLists.txt
src/starterwarefree/utils/: CMakeLists.txt
tools/: Idris.cmake  gcc-toolchain.cmake  platforms.cmake  qemu.cmake  test-build-all.sh  top-level.cmake  utils.cmake
